--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "axios-progress-bar": "^1.2.0",
+    "dompurify": "^1.0.10",
+    "gravatar": "^1.8.0",
+    "highlight.js": "^9.15.6",
+    "immutable": "^4.0.0-rc.12",
+    "marked": "^0.6.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-dropzone": "^10.1.3",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
